add fillblank, writing and translation pages

--- a/src/dbcp.properties
+++ b/src/dbcp.properties
@@ -2,6 +2,6 @@
 driverClassName=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/cafe?serverTimezone=Asia/Shanghai&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 username=root
-password=2015mhzx
+password=123456
 
 defaultAutoCommit=true
